showMore button in home done

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -922,7 +922,6 @@ body {
 }
 .myShowMenuBtn:hover {
     background-color: rgb(250, 217, 51);
-
 }
 .myPartyCardInfoRow {
     min-height: 8vw;
@@ -1039,4 +1038,23 @@ body {
     position:fixed;	
     top:50%;	
     left:50%;	
+}
+
+.showMoreButtonDiv {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.showMoreButton {
+    margin-top: -10px;
+    background-color: #4ECDC4;
+    border-radius: 10px;
+    border: 2px solid #4ECDC4;
+    color: #fff;
+    padding-bottom: 3px;
+    padding-top: 3px;
+    padding: 5px 40px;
+}
+.showMoreButton:hover {
+    background-color: #32b3aa;
 }
